add community apis
